TROUBLESHOOTING/AWS-TROUBLESHOOTING/KUBERNETES/UTILITYPODS/BASH.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bash-shell
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bash-shell
  template:
    metadata:
      labels:
        app: bash-shell
    spec:
      containers:
      - name: bash
        image: bash:latest
        command: ["/usr/local/bin/bash"]  # Correct path in the image
        args: ["-c", "while true; do sleep 3600; done"]
