TROUBLESHOOTING/AWS-TROUBLESHOOTING/KUBERNETES/UTILITYPODS/NETSHOOT-KUB.yaml
#
# aws eks update-kubeconfig --name rEksCluster --profile test
# kubectl get pods -o wide
# kubectl exec -it nginx-netshoot-7f9c6957f8-kr8q6 -c netshoot -- /bin/bash
# curl 172.22.164.13:9001
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-netshoot
  labels:
    app: nginx-netshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-netshoot
  template:
    metadata:
      labels:
        app: nginx-netshoot
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
      - name: netshoot
        image: nicolaka/netshoot
        command: ["/bin/bash"]
        args: ["-c", "while true; do ping localhost; sleep 60;done"]
